# reflector-rs

./: CHANGELOG.md  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml  daily.yml  release-bins.yml  release-libs.yml  release.yml
crates/arch-mirrors-rs/: Cargo.toml  README.md
crates/arch-mirrors-rs/src/: lib.rs  mirror.rs  protocol.rs  status.rs
crates/arch-reflector/: Cargo.toml
crates/arch-reflector/src/: cli.rs  lib.rs  main.rs  mirrors.rs
crates/arch-reflector/tests/: fetch_test.rs
man/: reflector.1
