[package]
name = "arch-mirrors-rs"
description = "Parse the Arch Linux mirror status."
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["IgnisDa <ignisda2001@gmail.com>", "James Liu <contact@no-bull.sh>"]
repository = "https://github.com/james7132/reflector-rs"
license = "GPL-2.0-or-later"
readme = "README.md"
keywords = ["arch-linux", "linux", "mirrors", "mirror", "mirrorlist"]

[dependencies]
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }

[lints]
workspace = true
