[package]
name = "arch-reflector"
version = "0.1.5"
description = "A Rust implementation of the arch linux reflector package"
edition = "2024"
rust-version = "1.85"
authors = ["IgnisDa <ignisda2001@gmail.com>", "James Liu <contact@no-bull.sh>"]
repository = "https://github.com/james7132/reflector-rs"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
arch-mirrors-rs = { path = "../arch-mirrors-rs", version = "0.1.1" }
clap = { workspace = true }
clap-verbosity-flag = "2.0.0"
comfy-table = "6.1.3"
directories = "6.0.0"
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }

