[package]
name = "arch-reflector"
version = "0.1.5"
description = "A Rust implementation of the arch linux reflector package"
edition = "2024"
rust-version = "1.85"
authors = ["IgnisDa <ignisda2001@gmail.com>", "James Liu <contact@no-bull.sh>"]
repository = "https://github.com/james7132/reflector-rs"
license = "GPL-2.0-or-later"
readme = "README.md"

[[bin]]
name = "reflector"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
arch-mirrors-rs = { path = "../arch-mirrors-rs", version = "0.1.1" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
xdg = "3.0"
reqwest = { version = "0.11.13", features = [
  "json",
  "native-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["rt-multi-thread", "process", "sync"] }
tempdir = "0.3"

[lints]
workspace = true
