[package]
name = "arch-reflector"
version = "0.1.5"
description = "Retrieve and filter a list of the latest Arch Linux mirrors."
edition = "2024"
rust-version = "1.85"
authors = ["IgnisDa <ignisda2001@gmail.com>", "James Liu <contact@no-bull.sh>"]
repository = "https://github.com/james7132/reflector-rs"
license = "GPL-2.0-or-later"
readme = "README.md"

[[bin]]
name = "reflector"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arch-mirrors-rs = { path = "../arch-mirrors-rs", version = "0.1.1" }
jiff = "0.2"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
xdg = "3.0"
reqwest = { version = "0.13", features = [
  "json",
  "native-tls",
  "http2",
  "stream",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
tokio = { version = "1.49", features = ["rt-multi-thread", "process", "sync"] }
tempfile = "3.2"

[lints]
workspace = true
